For details check git history.

devel branch:
	- Support for additonal routing tables via binit_net_route= param (Aaron Jones)
	- Populate /dev/disk/ with by-uuid and by-label symlinks before switching
	  to newroot. Fixes bug reported at Gentoo's bugzilla #559026.

v0.9.1:
	- Support for console= kernel param. (Contributed by manwe)
	- VLAN support (Artem Sidorenko)
	- use() is now consistant with itself, 0 is also false.
	- Probe for partitions table on all block devices after assembling
	  mdadm-driven arrays. Fixes the issue when partitions made on RAID arrays
	  has not been visable. (Reported by Coornaert David)

v0.9.0.1:
	- Bcache bugfix: Use /proc/partitions instead of /sys/block/*.
	  The latter one does not lists partitons on top level.

v0.9:
	- softraid: don't poke kernel to auto detect v0.9 arrays.
	- Version bumps:
		busybox 1.20.0 -> 1.21.1
		cryptsetup 1.4.3 -> 1.6.3
		dropbear 2012.55 -> 2013.62
		libgcrypt 1.5.0 -> 1.6.0
		libgpg-error 1.10 -> 1.12
		lvm2 2.02.97 -> 2.02.103
		mdadm 3.2.5 -> 3.2.6
		zlib 1.2.7 -> 1.2.8
	- Check whatever root variable is empty on mounting /newroot phase.
	- Enable discards support for LVM and DM Crypt LUKS by default.
	- Drop luks_trim option.
	- Add luks_no_discards option.
	- Reorder network setup iproute2 calls.
	- Don't wait remaining time for sshd if we send resume-boot from remote
	  shell (Andrew Glinskiy)
	- Fix misprint (Andrew Glinskiy)
	- Move run early hooks before SetupNetwork to have the abillity to insert
	  any kernel modules because on init hooks we are not have busybox symlinks.
	  Also setup /dev before early hooks that we have a complete minimal
	  environment. And move rootdelay nerly root mount point.(Andrew Glinskiy)
	- Wait for sshd connection only if rescueshell have never occur (Andrew Glinskiy)
	- Add support of profile source priority, it's useful with multiple
	  initrds (Andrew Glinskiy)
	- Show running hooks (Andrew Glinskiy)